--- a/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
+++ b/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
@@ -484,51 +484,54 @@ Beim ersten Import der eBay-Nachrichten werden nur die Nachrichten der vergangen
 [#2300]
 ==== Tickets aus Formularen erstellen
 
-Mit Formularen kannst du Kontaktformulare in den Webshop einbinden. Die Formulare werden von Besuchern deines Webshops ausgefüllt und dann als Ticket erstellt. Um anschließend aus dem Ticket antworten zu können, muss im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* ein gültiges E-Mail-Konto eingerichtet sein.
+Mit Formularen kannst du Kontaktformulare in deinen plentyShop einbinden, damit Interessent:innen und Kund:innen mit dir in Kontakt treten können. Besucher:innen deines plentyShops füllen die Formulare aus und diese werden dann als Ticket erstellt. 
 
-Unabhängig von diesem Ticket und dem weiteren Vorgehen im Ticketsystem erhältst du als Händler eine Infomail über den Eingang einer neuen Nachricht an die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* gespeicherte E-Mail-Adresse. Diese E-Mail erhältst du auch, wenn du kein Ticketsystem xref:crm:ticketsystem-nutzen.adoc#100[gebucht] hast.
+Damit die Tickets in deinem System ankommen und du anschließend aus dem Ticket antworten kannst, muss im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* ein gültiges E-Mail-Konto eingerichtet sein.
+
+Unabhängig von diesem Ticket und dem weiteren Vorgehen im Ticketsystem erhältst du als Händler:in eine Infomail über den Eingang einer neuen Nachricht an die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* gespeicherte E-Mail-Adresse. Diese E-Mail erhältst du auch, wenn du kein Ticketsystem xref:crm:ticketsystem-nutzen.adoc#100[gebucht] hast.
 
 [TIP]
 .Beispiel für die Verwendung des Kontaktformulars
 ====
-Ein Webshop-Besucher hat eine Frage zu deinen Artikeln und nutzt das Kontaktformular in deinem Webshop, um mit dir in Kontakt zu treten. Daraufhin wird im Ticketsystem ein Ticket mit der Nachricht aus dem Kontaktformular erstellt. Du oder einer deiner Kollegen antwortet im Ticketsystem per Nachricht auf das Ticket. Mit einer entsprechend eingerichteten Ereignisaktion erhält der Webshop-Besucher daraufhin eine E-Mail. Der Webshop-Besucher antwortet jetzt aus seinem E-Mail-Programm auf deine Nachricht. Wenn die richtigen Parameter wie Ticket-ID etc. in dieser E-Mail als Template-Variablen eingefügt sind, wird die E-Mail dem Ticket zugeordnet. +
-*_Hinweis:_* Hat der Webshop-Besucher z.B. die Ticket-ID oder andere Zuordnungsparameter aus dem Betreff und der E-Mail gelöscht, kann keine Zuordnung stattfinden. Ein neues Ticket wird daher erstellt. +
-Ein neues Ticket wird ebenfalls erstellt, wenn der Webshop-Besucher statt direkt auf die E-Mail zu antworten wieder das Kontaktformular nutzt, weil in diesem Fall die Zuordnungsparameter in der Nachricht fehlen und dein plentymarkets System die Zugehörigkeit zu einer vorhergehenden Nachricht nicht erkennen kann.
+Eine Webshop-Besucherin hat eine Frage zu deinen Artikeln und nutzt das Kontaktformular in deinem Webshop, um mit dir in Kontakt zu treten. Daraufhin wird im Ticketsystem ein Ticket mit der Nachricht aus dem Kontaktformular erstellt. Du oder eine:r deiner Kolleg:innen antwortet im Ticketsystem per Nachricht auf das Ticket. Mit einer entsprechend eingerichteten Ereignisaktion erhält die Webshop-Besucherin daraufhin eine E-Mail. Die Webshop-Besucherin antwortet jetzt aus ihrem E-Mail-Programm auf deine Nachricht. Wenn die richtigen Parameter wie Ticket-ID etc. in dieser E-Mail als Template-Variablen eingefügt sind, wird die E-Mail dem Ticket zugeordnet. +
+*_Hinweis:_* Hat die Webshop-Besucherin z.B. die Ticket-ID oder andere Zuordnungsparameter aus dem Betreff und der E-Mail gelöscht, kann _keine Zuordnung_ stattfinden. Ein neues Ticket wird daher erstellt. +
+Ein neues Ticket wird ebenfalls erstellt, wenn die Webshop-Besucherin statt direkt auf die E-Mail zu antworten wieder das Kontaktformular nutzt, weil in diesem Fall die Zuordnungsparameter in der Nachricht fehlen und dein plentymarkets System die Zugehörigkeit zu einer vorhergehenden Nachricht nicht erkennen kann.
 ====
 
-Gehe wie im Folgenden beschrieben vor, damit Tickets aus Kontaktformularen, die von Interessent:innen und Kund:innen im Webshop ausgefüllt werden, automatisch erstellt werden.
+Gehe wie im Folgenden beschrieben vor, damit Tickets aus Kontaktformularen, die von Interessent:innen und Kund:innen in deinem plentyShop ausgefüllt werden, automatisch erstellt werden.
 
 [.instruction]
 Tickets aus Formularen erstellen:
 
-. Öffne das Menü *Einrichtung » CMS » Formulare*.
-. Gib den *Formularnamen* ein.
-. Wähle den *Tickettyp*.
-. Wähle den *Ticketstatus*.
-. Gib den Feldnamen für die E-Mail-Adresse ein.
-. Wähle den Typ *Textfeld E-Mail-Adresse* aus der Dropdown-Liste. +
-→ Beachte den Hinweis in der folgenden Box.
-. Gib ggf. weitere Feldnamen ein.
-. Wähle für jeden Feldnamen einen *Typ* aus der Dropdown-Liste.
-. *Speichere* (icon:save[role="green"]) die Einstellungen. +
-→ Jedes Mal, wenn das Formular ausgefüllt und abgeschickt wird, wird ein Ticket dieses Typs erstellt.
+. Öffne das Menü *Plugins » Plugin-Set-Übersicht*.
+. Klicke auf das Plugin-Set, das das link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop LTS^]-Plugin enthält.
+. Klicke in die Zeile des plentyShop LTS-Plugins. +
+→ Das Menü *plentyShop LTS » Konfiguration* öffnet sich.
+. Klappe den Bereich *Kontaktformular* auf.
+. Gib im Feld *E-Mail-Adresse des Kontaktformulars* die E-Mail-Adresse ein, an die die Kontaktformulare gesendet werden sollen. +
+*_Wichtig:_* Damit aus den versendeten Formularen Tickets in deinem Ticketsystem erstellt werden, musst du hier die selbe E-Mail-Adresse eingeben wie im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten*. Weitere Informationen findest du im Menü  xref:crm:ticketsystem-nutzen.adoc#2100[E-Mail-Konto einrichten].
+. Gib ggf. E-Mail-Adressen für Kopien (CC) bzw. Blindkopien (BC) der Kontaktanfragen ein.
+. Wähle (icon:check-square[role="blue"]), welche deiner Kontaktdaten im Formular angezeigt werden sollen. +
+*_Hinweis:_* Die hier gewählten Daten werden aus dem Menü *Einrichtung » Einstellungen » Stammdaten* übernommen.
+. Entscheide, ob du im Formular eine Checkbox anzeigen lassen möchtest, mit der die Datenschutzerklärung akzeptiert werden kann.
+. *Speichere* (icon:save[]) die Einstellungen. +
+→ Jedes Mal, wenn ein:e Besucher:in ein Formular in deinem plentyShop ausgefüllt und abgeschickt wird, wird ein Ticket in deinem plentyShop erstellt.
 
-// Alle weiteren Formulareinstellungen sind optional. Weitere Informationen findest du auf der Handbuchseite <<webshop/webshop-einrichten/cms#einstellungen-formulare#, Alter Webshop:{nbsp}CMS>>.
 
 [IMPORTANT]
 .Zuordnung ausschließlich anhand von E-Mail-Adressen
 ====
-Kontaktformulare werden ausschließlich anhand der E-Mail-Adresse der Kund:innen zugeordnet. Eine E-Mail-Adresse in Kontaktformularen muss vom Typ *Textfeld E-Mail-Adresse* sein, ansonsten erkennt dein plentymarkets System nicht, dass es sich bei der Information um die E-Mail-Adresse handelt. E-Mail-Adresse, die in anderen Feldern, z.B. Nachricht oder Sonstiges eingegeben werden, werden nicht für die Zuordnung berücksichtigt und werden auch nicht für eine Antwort verwendet.
+Kontaktformulare werden ausschließlich anhand der E-Mail-Adresse der Kund:innen zugeordnet. Eine E-Mail-Adresse in Kontaktformularen muss vom im dafür vorgesehenen Feld *E-Mail* eingegeben sein, ansonsten erkennt dein plentymarkets System nicht, dass es sich bei der Information um die E-Mail-Adresse handelt. E-Mail-Adressen, die in anderen Feldern, z.B. Nachricht oder Sonstiges eingegeben werden, werden _nicht_ für die Zuordnung berücksichtigt und werden auch _nicht_ für eine Antwort verwendet.
 ====
 
-Wenn die E-Mail-Adresse einem bestehenden Kontakt zugeordnet werden kann, wird dieser Kontakt im Ticket angezeigt. Wenn die E-Mail-Adresse keinem bestehenden Kontakt zugeordnet werden kann, siehst du die E-Mail-Adresse des Absenders nicht im Ticketsystem. Wird nun eine Nachricht im Ticketsystem verfasst, wird diese trotzdem an die Absenderadresse versendet.
+Wenn die E-Mail-Adresse einem bestehenden Kontakt zugeordnet werden kann, wird dieser Kontakt im Ticket angezeigt. Wenn die E-Mail-Adresse keinem bestehenden Kontakt zugeordnet werden kann, siehst du die E-Mail-Adresse des Absenders _nicht_ im Ticketsystem. Wird nun eine Nachricht im Ticketsystem verfasst, wird diese trotzdem an die Absenderadresse versendet.
 
 Antworte deinen Kund:innen im Ticketsystem per Nachricht. Beachte, dass eine Nachricht nur als E-Mail versendet wird, wenn dafür eine Ereignisaktion im Menü *Einrichtung » CRM » Ticketsystem » Ereignisse* eingerichtet wurde.
 
 [IMPORTANT]
 .Verwendung des ersten E-Mail-Kontos für Antwortnachrichten auf Formulartickets
 ====
-Wenn du mehrere xref:crm:ticketsystem-nutzen.adoc#2100[E-Mail-Konten] im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* eingerichtet hast, wird für den Versand einer Antwortnachricht auf ein Formularticket das E-Mail-Konto verwendet, das du zuerst eingerichtet haben.
+Wenn du mehrere xref:crm:ticketsystem-nutzen.adoc#2100[E-Mail-Konten] im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* eingerichtet hast, wird für den Versand einer Antwortnachricht auf ein Formularticket das E-Mail-Konto verwendet, das du zuerst eingerichtet hast.
 ====
 
 [#2400]
