--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -3,7 +3,7 @@
 :id: 93G3IG4
 :author: team-docs-automation
 
-Dieses Kapitel beschreibt die Arbeitsschritte, die du für Prozesse einrichten kannst. Für einen Prozess kannst du beliebig viele Arbeitsschritte erstellen. 
+Diese Handbuchseite beschreibt die Arbeitsschritte, die du für Prozesse einrichten kannst. Für einen Prozess kannst du beliebig viele Arbeitsschritte erstellen. 
 
 Je nach Typ des Arbeitsschrittes stehen mehr oder weniger detaillierte Einstellungsmöglichkeiten zur Verfügung. Diese bestehen in erster Linie aus Aktionen und Subaktionen, die hintereinander geschaltet werden und als Prozess endlos oder manuell gesteuert ablaufen. Dabei sind auch Filter auswählbar, die für Arbeitsschritte sehr individuelle Einstellungen ermöglichen.
 
@@ -134,7 +134,7 @@ Option *Expressversand* aktiviert sein.
 *Beispiel*: Für ein Gewicht von 3,5 kg und darüber *3500* in das Textfeld eingeben und den Operator *&gt;=* wählen.
 
 | *Herkunft*
-|Wähle die <<xref:auftraege:auftragsherkunft.adoc#[Herkunft der Aufträge], nach der gefiltert werden soll. Eine Mehrfachauswahl ist möglich.
+|Wähle die xref:auftraege:auftragsherkunft.adoc#[Herkunft der Aufträge], nach der gefiltert werden soll. Eine Mehrfachauswahl ist möglich.
 
 | *Kundenklasse*
 |Wähle eine oder mehrere xref:crm:kontakte-verwalten.adoc#15[Kundenklassen], nach denen die Aufträge gefiltert werden sollen.
