--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -921,7 +921,7 @@ Dir stehen verschiedene Filter zur Verfügung, um spezifische Informationen zum 
 |Suche nach allen Aufträgen, die sich in einem bestimmten Zahlungsstatus befinden. Zum Beispiel kannst du alle Aufträge suchen, die teilbezahlt sind. Zur Auswahl stehen die Zahlungsstatus ausstehend, teilbezahlt, bezahlt und überbezahlt.
 
 |[#intable-account-filter-reset]*ZURÜCKSETZEN*
-|SSetzt die gewählten Filterkriterien zurück.
+|Setzt die gewählten Filterkriterien zurück.
 
 |[#intable-account-filter-search]*SUCHEN*
 |Führt die Suche aus. Die gefundenen Kontodaten werden in der Übersicht angezeigt.
