--- a/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/newsletter-versenden.adoc
@@ -36,7 +36,7 @@ Newsletter-Zugangsdaten eingeben:
 |Einstellung |Erläuterung
 
 | *Name des Absenders*
-|Gib deinen eigenen Namen oder den Namen deines Webshops ein. Der Name wird den Empfänger:innen angezeigt.
+|Gib deinen eigenen Namen oder den Namen deines plentyShops ein. Der Name wird den Empfänger:innen angezeigt.
 
 | *E-Mail-Adresse*
 |Gib die E-Mail-Adresse ein, wie sie auch im E-Mail-Programm steht. Über diese E-Mail-Adresse wird der Newsletter versendet.
@@ -88,10 +88,10 @@ E-Mail-Ordner erstellen:
 *_Hinweis:_* Gib eine eindeutige ID ein. Wird eine bereits bestehende ID eingegeben, wird der ursprüngliche Ordner überschrieben.
 
 | *Bezeichnung*
-|Dies ist der Name des E-Mail-Ordners. Wird die Option *Auswählbar durch Kunden* aktiviert, ist der Name für Kund:innen im Webshop sichtbar.
+|Dies ist der Name des E-Mail-Ordners. Wird die Option *Auswählbar durch Kunden* aktiviert, ist der Name für Kund:innen im plentyShop sichtbar.
 
 | *Auswählbar durch Kunden*
-|Aktiviere diese Option, wenn der Ordner von Kund:innen im Webshop gewählt werden soll. Der Ordner wird im Bereich *Mein Konto* des Webshops angezeigt. Kund:innen wählen dann Newsletter anhand der dort verfügbaren Ordner.
+|Aktiviere diese Option, wenn der Ordner von Kund:innen in deinem plentyShop gewählt werden soll. Der Ordner wird im Bereich *Mein Konto* des plentyShops angezeigt. Kund:innen wählen dann Newsletter anhand der dort verfügbaren Ordner.
 
 | *Position*
 |Gib die Position ein, um festzulegen, in welcher Reihenfolge die Ordner angezeigt werden sollen.
@@ -118,14 +118,14 @@ E-Mail-Ordner bearbeiten:
 [#500]
 === E-Mail-Adressen dem Newsletter-Hauptordner zuordnen
 
-Füge das ShopBuilder-Widget *Newsletter* in deinen plentyShop ein, damit deine Kund:innen sich für deinen Newsletter anmelden können. Über das Widget wählst du den E-Mail-Ordner, der automatisch mit der E-Mail-Adresse einer Person verknüpft wird, wenn diese Person den Newsletter im Webshop abonniert.
+Füge das ShopBuilder-Widget *Newsletter* in deinen plentyShop ein, damit deine Kund:innen sich für deinen Newsletter anmelden können. Über das Widget wählst du den E-Mail-Ordner, der automatisch mit der E-Mail-Adresse einer Person verknüpft wird, wenn diese Person den Newsletter im plentyShop abonniert.
 
 Wie du dazu vorgehen musst, ist auf der Handbuchseite xref:webshop:shop-builder.adoc#_newsletter[ShopBuilder einrichten] beschrieben. Wirf zudem auch gerne einen Blick in unser Webinar xref:webshop:shopbuilder-startseite-aktionsseite.adoc#[ShopBuilder - Startseite und Aktionsseite für den Webshop]. Dort wird ab Minute 22:10 erklärt, wie du das Newsletter-Widget in deinem plentyShop einbindest.
 
 [#600]
 === Newsletter-Wahl für Kund:innen erlauben
 
-Lasse deine Kund:innen selbst bestimmen, welche Newsletter sie von dir erhalten. Das ist z.B. von Vorteil, wenn du regelmäßig Newsletter zu verschiedenen Themenbereichen versendest. Deine Kund:innen können alle E-Mail-Ordner, die du unter der Option *Auswählbar durch Kunden* in <<#table-create-email-folder>> aktiviert hast, im Bereich *Mein Konto* des Webshops wählen. Die E-Mail-Adresse dieser Person wird dann in diesem E-Mail-Ordner in deinem plentymarkets System gespeichert.
+Lasse deine Kund:innen selbst bestimmen, welche Newsletter sie von dir erhalten. Das ist z.B. von Vorteil, wenn du regelmäßig Newsletter zu verschiedenen Themenbereichen versendest. Deine Kund:innen können alle E-Mail-Ordner, die du unter der Option *Auswählbar durch Kunden* in <<#table-create-email-folder>> aktiviert hast, im Bereich *Mein Konto* des plentyShops wählen. Die E-Mail-Adresse dieser Person wird dann in diesem E-Mail-Ordner in deinem plentymarkets System gespeichert.
 
 [#700]
 === E-Mail-Vorlage erstellen
