--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -19,8 +19,8 @@ NOTE: Bisher kannst du noch nicht alle Arten von Daten über Kataloge exportiere
 [#catalogue-menu]
 == Erstes Kennenlernen: Menüaufbau
 
-image::maerkte:menüaufbau-standardformat.png[]
-_Menüaufbau Katalog mit Standardformat_
+image::daten:menüaufbau-standardformat.png[]
+_Menüaufbau eines Katalogs mit Standardformat_
 
 [cols="1,3a"]
 |====
@@ -534,7 +534,17 @@ Die Informationen in diesem Kapitel sind so aufgebaut:
 [#add-fields]
 === Datenfelder zu Export hinzufügen
 
-Nun entscheidest du, welche Datenfelder aus plentymarkets mit dem Katalog exportiert werden sollen. Optional kannst du für jedes Datenfeld auch ein oder mehrere Ausweich-Datenfelder wählen. Ist ein Wert im System nicht vorhanden, wird dann stattdessen der Wert des Ausweich-Datenfelds exportiert.
+Nun entscheidest du, welche plentymarkets Datenfelder mit dem Katalog exportiert werden sollen. Dazu fügst du die Datenfelder wie unten beschrieben zum Export hinzu.
+
+Optional hast du auch komplexere Exportmöglichkeiten:
+
+* Ein anderes Datenfeld exportieren, wenn das erste Datenfeld leer ist (*Ausweich-Datenfelder hinzufügen*)
+* Für jeden Datensatz denselben Wert exportieren (icon:pencil[role="black"]) *Eigener Wert*)
+* Mehrere Datenfelder miteinander kombinieren
+* Die Reihenfolge der Datenfelder ändern
+* Zahlenwerte beim Export neu berechnen (icon:calculate[set=material] *Formel*)
+
+Diese optionalen Exportmöglichkeiten werden unterhalb der Anleitung genauer erklärt.
 
 [.instruction]
 Datenfelder zum Export hinzufügen:
@@ -542,20 +552,19 @@ Datenfelder zum Export hinzufügen:
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
 . Klicke auf den Katalog. +
-→ Das Tab *Datenfelder* (icon:order_return_create_edit[set=plenty]) wird geöffnet. +
-→ Die verfügbaren plentymarkets Datenfelder werden in Gruppen angezeigt.
-. Klappe eine Gruppe auf, um die verfügbaren Datenfelder anzuzeigen. +
-→ Die Datenfelder werden angezeigt.
-. Klicke neben dem gewünschten Datenfeld auf das Plus. +
+→ Die Ansicht *Datenfelder* (icon:order_return_create_edit[set=plenty]) des Katalogs wird geöffnet. +
+→ Die verfügbaren plentymarkets Datenfelder werden in Gruppen angezeigt. Außerdem werden die Optionen *icon:pencil[role="black"] Eigener Wert* und *icon:calculate[set=material] Formel* angezeigt. +
+. Klappe eine Datenfeldgruppe auf, um die Datenfelder dieser Gruppe anzuzeigen.
+. Klicke neben dem Datenfeld auf das Plus, das du exportieren möchtest. +
 *_Tipp:_* Gib alternativ den Namen des Datenfelds in das Suchfeld ein. Wähle das Datenfeld aus den Suchergebnissen. +
 → Das Datenfeld wird zum Export hinzugefügt. +
-. Prüfe, ob der Export Key deinen Anforderungen entspricht. +
+. Prüfe, ob der Export Key deine Anforderungen erfüllt. +
   ** *_Was ist ein Export Key?_* +
-  Der "Export Key" ist der Name der Spaltenüberschrift, der in deiner Exportdatei erscheinen wird. Jeder "Export Key" muss eindeutig sein. Export Keys dürfen keine Leerzeichen enthalten. +
-  *_Wichtig:_* Wenn mehrere Datenfelder denselben Export Key haben, wird nur eines der Datenfelder exportiert.
-. Füge alle gewünschten Datenfelder hinzu.
+  Der "Export Key" ist der Name der Spaltenüberschrift, der in deiner Exportdatei erscheinen wird. Jeder "Export Key" darf in diesem Katalog nur einmal vorkommen. Export Keys dürfen außerdem keine Leerzeichen enthalten. +
+  *_Wichtig:_* Wenn mehrere Datenfelder denselben Export Key haben, wird nur eines dieser Datenfelder exportiert.
+. Füge alle Datenfelder hinzu, die du exportieren möchtest.
 . *Speichere* (icon:save[set=material]) die Einstellungen. +
-→ Die Datenfelder werden exportiert. +
+→ Die Datenfelder werden mit diesem Katalog exportiert. +
 *_Tipp:_* In den Info-Boxen unter dieser Beschreibung findest du Informationen zu komplexeren Exportmöglichkeiten.
 
 [.collapseBox]
@@ -564,7 +573,7 @@ Datenfelder zum Export hinzufügen:
 
 Mit Ausweich-Datenfeldern legst du fest:
 
-* Ich möchte, dass das gewählte plentymarkets Datenfeld exportiert wird.
+* Ich möchte, dass das erste plentymarkets Datenfeld exportiert wird.
 * Wenn dieses Datenfeld für einen Datensatz leer oder ungültig ist, wird das erste Ausweich-Datenfeld geprüft und stattdessen dieser Wert exportiert.
 * Wenn auch das erste Ausweich-Datenfeld leer oder ungültig ist, wird das zweite Ausweich-Datenfeld geprüft und stattdessen dieser Wert exportiert usw.
 
@@ -617,7 +626,7 @@ Im folgenden GIF ist das Standardformat *Warenbestände* zu sehen.
 
 image::daten:gif-standardformate-own-value.gif[width=600]
 
-Ergebnis in der Exportdatei:
+*_Ergebnis in der Exportdatei:_*
 
 * Jeder exportierte Datensatz hat eine Zelle, in dem dein Firmenname steht:
 
@@ -660,7 +669,7 @@ Im folgenden GIF ist das Standardformat *Hersteller* zu sehen.
 
 image::daten:gif-standardformate-combination.gif[width=600]
 
-Ergebnis in der Exportdatei:
+*_Ergebnis in der Exportdatei:_*
 
 image::daten:ergebnis-export-street.png[]
 --
