new EP - setting - DE+EN

--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -469,6 +469,8 @@ Set up xref:automation:event-procedures.adoc#[event procedures] to automatically
 
 Set up an xref:automation:event-procedures.adoc#[event procedure] to automatically inform {market} when you have shipped the items of an order.
 
+*_Important:_* To activate this event procedure, you need to change the setting *Send shipping confirmations via* to *Event procedure*. Go to *Setup » Markets » Kaufland.de » Einstellungen* to change this setting.
+
 :table-event-procedure: <<#shipping-confirmation-kaufland>>
 
 include::_includes:page$EA.adoc[]
@@ -501,7 +503,8 @@ _or_
 | *Plugin*
 | *Send shipping confirmation to Kaufland.de* +
 *_Note:_* If no shipping confirmation could be sent to {market}, the order is moved to the status that you selected for the option *Order status for orders with failed shipping confirmations*. Go to *Setup » Markets » Kaufland.de » Settings* to set this option. +
-<<#no-shipping-confirmation, How to deal with orders in this status>>
+
+* <<#no-shipping-confirmation, How to deal with orders in this status>>
 |====
 
 [#890]
