--- a/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
@@ -85,6 +85,10 @@ Kontakt erstellen:
 . *Speichere* (icon:save[set=material]) die Einstellungen. +
 → Der Kontakt wird erstellt.
 
+[TIP]
+Sobald der Kontakt erstellt ist, wirst du in den Kontaktdatensatz weitergeleitet und kannst den Kontakt dort xref:crm:kontakt-bearbeiten.adoc#[weiter bearbeiten]. +
+Im Kontaktdatensatz ganz unten links in der Seitennavigation kannst du die ID des Kontakts mit einem Klick auf die Kontakt-ID (icon:content_copy[set=material]) in die Zwischenablage kopieren.
+
 [[table-create-contact]]
 .Kontakt erstellen
 [cols="1,3"]
