--- a/docs/en-gb/modules/markets/partials/zalando-faq.adoc
+++ b/docs/en-gb/modules/markets/partials/zalando-faq.adoc
@@ -122,7 +122,8 @@ The characteristic *Zalando » Altersgruppe* (age group) for the variation ID (=
 [.collapseBox]
 .errors (1234567) (ValueId:12345): sizeRegister
 --
-The characteristic *Zalando » Größen-Register* (size register) is missing or was not created correctly.
+The characteristic *Zalando » Größen-Register* (size register) is missing or was not created correctly. +
+*_Note:_* This only applies if you do NOT use attributes to indicate sizes.
 
     * _Scenario 1:_ The characteristic is missing. +
     The characteristic has to be added and linked to the appropriate size register.
@@ -160,7 +161,10 @@ The characteristic *Zalando » Jahreszeiten-Code* (seasonal code) for the variat
 [.collapseBox]
 .errors (1234567) (ValueId:12345): size
 --
-The characteristic *Zalando » Geschlecht* (gender) for the variation ID (=ValueID) is missing.
+The characteristic *Zalando » Größe* (size) for the variation ID (=ValueID) is missing _or_ the attribute was not linked with the characteristic.
+
+*_Note:_* You can use item attributes to indicate sizes. It is mandatory to link the attributes in the size register.
+Here's how to xref:markets:zalando.adoc#700[link attributes to characteristics].
 --
 
 [.collapseBox]
@@ -386,4 +390,11 @@ Any documents requested by Zalando have to be configured according to Zalando’
 *_Note:_* As Zalando has specific requirements and you can only configure the documents globally, you should create an additional client which you only use for Zalando. This prevents your present settings from being overwritten. You can individually set up the documents afterwards. +
 You can book an additional client in the *plentymarkets logo (Start) » My account » Contracts* menu. +
 How to set up you documents is described on the xref:orders:order-documents.adoc#[Setting up documents] page.
+--
+
+[.collapseBox]
+.When is the master data exported?
+--
+*_Note:_* The master data contains your size registers and the silhouettes that you want to use. +
+As in the case of silhouettes, size registers are imported every Wednesday.
 --
