--- a/docs/de-de/modules/maerkte/partials/zalando-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/zalando-faq.adoc
@@ -382,3 +382,10 @@ Sämtliche Dokumente, welche Zalando von dir einfordert, müssen selbstständig 
 Einen zusätzlichen Mandanten buchst du unter *START (plentymarkets Logo) » Mein-Konto » Verträge*. +
 Wie die Einrichtung deiner Dokumente funktioniert, erfährst du auf der Handbuchseite xref:auftraege:auftragsdokumente.adoc#[Auftragsdokumente].
 --
+
+[.collapseBox]
+.Wann werden die "Master Data" importiert?
+--
+*_Hinweis:_* Die „Master Data“ enthalten u.a. deine SizeRegister (Größenregister) sowie die Silhouetten, die du nutzen möchtest. +
+Genau wie die Silhouetten werden die Größenregister ebenfalls jeden Mittwoch importiert.
+--
