Added additional questions (#198)
* Added additional questions

* Update zalando-faq.adoc

* Added additional info

--- a/docs/de-de/modules/maerkte/partials/zalando-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/zalando-faq.adoc
@@ -123,6 +123,7 @@ Das Merkmal *Zalando » Altersgruppe* für die VariantenID (=ValueID) fehlt.
 .errors (1234567) (ValueId:12345): sizeRegister
 --
 Das Merkmal *Zalando » Größen-Register* fehlt oder wurde nicht korrekt angelegt.
+*_Hinweis:_* Dies gilt nur, wenn du deine Größen _nicht_ über Attribute pflegst.
 
     * _Fall 1:_ Das Merkmal fehlt. +
     Das Merkmal muss hinzugefügt und mit dem entsprechenden Größenregister gepflegt werden.
@@ -160,7 +161,9 @@ Das Merkmal *Zalando » Jahreszeiten-Code* für die VariantenID (ValueID) fehlt.
 [.collapseBox]
 .errors (1234567) (ValueId:12345): size
 --
-Das Merkmal *Zalando » Größe* für die VariantenID (ValueID) fehlt.
+Das Merkmal *Zalando » Größe* für die VariantenID (ValueID) fehlt _oder_ das Attribut wurde noch nicht mit dem Merkmal verknüpft. +
+*_Hinweis:_* Für die Größen können Artikelattribute genutzt werden. Hierfür ist es zwingend notwendig, die Attribute mit dem Größenregister zu verknüpfen. +
+Wie du Attribute mit Merkmalen verknüpfen kannst, findest du xref:maerkte:zalando.adoc#700[hier].
 --
 
 [.collapseBox]
@@ -381,4 +384,11 @@ Sämtliche Dokumente, welche Zalando von dir einfordert, müssen selbstständig 
 *_Hinweis:_* Da Zalando an dieser Stelle gewisse Anforderungen hat und du die Einstellungen der Dokumente nur global konfigurieren kannst, solltest du einen separaten Mandanten ausschließlich für Zalando anlegen, um deine bestehenden Einstellungen nicht zu überschreiben. Für jeden Mandanten hast du anschließend die Möglichkeit, die Dokumente individuell zu gestalten. +
 Einen zusätzlichen Mandanten buchst du unter *START (plentymarkets Logo) » Mein-Konto » Verträge*. +
 Wie die Einrichtung deiner Dokumente funktioniert, erfährst du auf der Handbuchseite xref:auftraege:auftragsdokumente.adoc#[Auftragsdokumente].
+--
+
+[.collapseBox]
+.Wann werden die "Master Data" importiert?
+--
+*_Hinweis:_* Die „Master Data“ enthalten u.a. deine SizeRegister (Größenregister) sowie die Silhouetten, die du nutzen möchtest. +
+Genau wie die Silhouetten werden die Größenregister ebenfalls jeden Mittwoch importiert.
 --
