--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -410,7 +410,9 @@ Mit einem Klick auf *Neues Tag hinzufügen* (icon:add[set=material]) wirst du in
 [#plentyshop-login]
 === plentyShop-Login
 
-Hier kannst du das <<#passwort-manuell-aendern, Passwort für deinen Kontakt manuell ändern>>, eine <<#e-mail-passwort-zuruecksetzen, E-Mail mit einem Link zum Ändern des Passworts>> an den Kontakt versenden, den <<#login-entsperren, Login entsperren>> und den Mein Konto-Bereich des Kontakts über die <<#link-kopieren-oeffnen, Login-URL öffnen>>.
+Hier kannst du das <<#passwort-manuell-aendern, Passwort für deinen Kontakt manuell ändern>>, eine <<#e-mail-passwort-zuruecksetzen, E-Mail mit einem Link zum Ändern des Passworts>> an den Kontakt versenden, den <<#login-entsperren, Login entsperren>> und den Mein Konto-Bereich des Kontakts über die <<#link-kopieren-oeffnen, Login-URL öffnen>>. 
+
+Mit einem Klick auf *Neu laden* (icon:refresh[set=material]) lädst du den Bereich *plentyShop-Login* neu.
 
 [[image-plentyshop-login]]
 .plentyShop-Login
@@ -712,9 +714,9 @@ Historie ansehen:
 [#bankdaten]
 === Bankdaten
 
-Hier werden die dem Kontakt zugehörigen Bankdaten angezeigt. Insgesamt werden die in diesem Bereich bis zu 50 Bankdatensätze angezeigt.
+Hier werden die dem Kontakt zugehörigen Bankdaten angezeigt. Insgesamt werden dir in diesem Bereich bis zu 50 Bankdatensätze angezeigt.
 
-Klicke auf icon:more_vert[set=material], um die Bankdaten zu bearbeiten oder zu löschen. Mit einem Klick auf *Neue Bankdaten hinzufügen* (icon:add[set=material]) wirst du in einen neuen Bankdatensatz weitergeleitet und erstellst dort einen neuen Bankdatensatz. +
+Klicke auf icon:more_vert[set=material], um die Bankdaten zu bearbeiten oder zu löschen. Klicke auf *Neu laden* (icon:refresh[set=material]), um den Bereich *Bankdaten* neu zu laden. Mit einem Klick auf *Neue Bankdaten hinzufügen* (icon:add[set=material]) wirst du in einen neuen Bankdatensatz weitergeleitet und erstellst dort einen neuen Bankdatensatz. +
 *_Hinweis:_* Jeder Bankdatensatz bekommt eine fortlaufende ID, die _nicht_ geändert werden kann. Die ID ist dabei jedoch nicht für einen Kontakt fortlaufend, sondern für alle Bankdatensätze, die du in deinem plentymarkets System erstellst.
 
 Klicke auf icon:more_vert[set=material], um die Bankdaten zu bearbeiten oder zu löschen.
