--- a/docs/de-de/modules/automatisierung/pages/drucker.adoc
+++ b/docs/de-de/modules/automatisierung/pages/drucker.adoc
@@ -3,12 +3,22 @@
 :id: VTQM7SL
 :author: team-docs-automation
 
-Im Menü *Einrichtung » Einstellungen » Drucker* richtest du lokal oder in deinem Netzwerk installierte Drucker in plentymarkets ein. Um plentymarkets mit lokal installierten Endgeräten zu verbinden, muss das Tool link:https://marketplace.plentymarkets.com/plugins/integration/plentybase_5053[plentyBase^] auf dem Rechner installiert und gestartet sein.
+Im Menü *Einrichtung » Einstellungen » Drucker* richtest du lokal oder in deinem Netzwerk installierte Drucker in plentymarkets ein. 
 
-Lerne die Druckereinstellungen spielerisch kennen:
+[IMPORTANT]
+.Voraussetzung: plentyBase
+====
+Um plentymarkets mit lokal installierten Endgeräten zu verbinden, muss das Tool link:https://marketplace.plentymarkets.com/plugins/integration/plentybase_5053[plentyBase^] auf dem Rechner installiert und gestartet sein.
+Das Menü *Einrichtung » Einstellungen » Drucker* ist im Backend deines plentymarkets System erst sichtbar, wenn du plentyBase installiert hast und das Tool gestartet ist.
+====
 
-.Drucker in plentymarkets einrichten
+Schau dir das folgende Video an, um mehr über Druckereinstellungen zu lernen.
+
+[.collapseBox]
+.*Video-Tutorial*
+--
 video::227403638[vimeo]
+--
 
 [#10]
 == Druckerkonfiguration erstellen
