add info on plentyPOS AT limitations / fix formatting

--- a/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
+++ b/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
@@ -283,7 +283,7 @@ Download TSE exports:
 . Click on *Search* (icon:search[role="blue"]). +
 → A list of available export files is displayed.
 . Click on *Download all exports* to download all export files displayed on the page. +
-→ *__Or*: Select individual export files in the list and click on *Download selected exports*. +
+→ *_Or:_* Select individual export files in the list and click on *Download selected exports*. +
 → The export files are downloaded.
 
 [#900]
@@ -426,6 +426,7 @@ For POS located in Austria, the steps described in <<table-activating-POS-Austri
 |Get a signature card and a signature card reader
 a| |* plentyPOS is optimised for use with the Feitian smartcard reader link:https://en.cryptoshop.com/feitian-br301-bluetooth-reader.html[bR301^].
 * plentymarkets tests with the signature cards of the service provider link:https://www.prime-sign.com/[PrimeSign^].
+* *_Important:_* At locations in Austria, plentyPOS can only be operated on Android devices.
 
 |2\.
 |Initialise the tamper-proof POS
