--- a/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
+++ b/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
@@ -426,7 +426,7 @@ For POS located in Austria, the steps described in <<table-activating-POS-Austri
 |Get a signature card and a signature card reader
 a| |* plentyPOS is optimised for use with the Feitian smartcard reader link:https://en.cryptoshop.com/feitian-br301-bluetooth-reader.html[bR301^].
 * plentymarkets tests with the signature cards of the service provider link:https://www.prime-sign.com/[PrimeSign^].
-* *_Important:_* At locations in Austria, plentyPOS can only be operated on Android devices.
+* *_Important:_* At locations in Austria, plentyPOS can only be operated on Android devices. Note the xref:welcome:quick-start-system-requirements.adoc#500[hardware requirements for plentyPOS].
 
 |2\.
 |Initialise the tamper-proof POS
