--- a/docs/de-de/modules/pos/pages/pos-rechtssicherheit.adoc
+++ b/docs/de-de/modules/pos/pages/pos-rechtssicherheit.adoc
@@ -426,6 +426,7 @@ Für Kassen mit Standort Österreich sind die in <<table-activating-POS-Austria>
 |Signaturkarte und Signaturkartenleser beschaffen
 a| * plentyPOS ist für den Einsatz mit dem Feitian Smartcard-Leser link:http://www.cryptoshop.com/feitian-br301-bluetooth-reader.html[bR301^] optimiert.
 * plentymarkets testet mit den Signaturkarten des Vertrauensdiensteanbieters link:https://www.prime-sign.com/[PrimeSign^].
+* *_Wichtig:_* Am Standort Österreich kann plentyPOS nur auf Android-Geräten werden. Beachte dazu die xref:willkommen:systemvoraussetzungen.adoc#500[Systemvoraussetzungen für plentyPOS].
 
 |2.
 |Manipulationssichere Registrierkasse initialisieren
