kaufland - create new status - DE+EN

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -81,7 +81,7 @@ a| * *Ja* = Schnittstelle zu Kaufland.de aktivieren. Daten werden mit Kaufland a
 !===
 
 | *Auftragsstatus für Aufträge mit fehlgeschlagener Versandbestätigung*
-| In welchen Status sollen Aufträge verschoben werden, für die keine Versandbestätigung an Kaufland.de gesendet werden konnte?
+| In welchen Status sollen Aufträge verschoben werden, für die keine Versandbestätigung an Kaufland.de gesendet werden konnte? Erstelle bei Bedarf einen xref:auftraege:auftraege-verwalten.adoc#1230[neuen Status].
 
 *_Hintergrund:_* Mit der Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> informierst du {market} automatisch darüber, dass die Artikel eines Auftrags versendet wurden. Wenn die Ereignisaktion nicht ausgeführt werden kann, wird der Auftrag in den Status geschoben, den du für die Einstellung *Auftragsstatus für Aufträge mit fehlgeschlagener Versandbestätigung* gewählt hast.
 
