--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -469,9 +469,10 @@ Richte xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] ein, um {ma
 [#shipping-confirmation]
 === NEU: Versandbestätigung senden
 
-Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um {market} darüber zu informieren, dass die Artikel eines Auftrags versendet wurden.
+Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um {market} darüber zu informieren, dass die Artikel eines Auftrags versendet wurden. +
+*_Tipp:_* In der Liste *Aktion hinzufügen* findest du die Aktion *Versandbestätigung an Kaufland.de senden* im Ordner *Plugins*.
 
-* *_Wichtig:_* Diese Ereignisaktion ist nur aktiviert, wenn die Einstellung *Versandbestätigungen senden über* auf die Option *Ereignisaktion* gestellt ist. Diese Einstellung findest du im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen*.
+* *_Wichtig:_* Diese Ereignisaktion ist nur aktiv, wenn die Einstellung *Versandbestätigungen senden über* auf die Option *Ereignisaktion* gestellt ist. Diese Einstellung findest du im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen*.
 
 :table-event-procedure: <<#shipping-confirmation-kaufland>>
 
@@ -730,9 +731,9 @@ Hier findest du Antworten auf häufig gestellte Fragen.
 .Es wurde keine Versandbestätigung gesendet. Was nun?
 --
 
-Mit der Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> informierst du {market} automatisch darüber, dass die Artikel eines Auftrags versendet wurden. Wenn die Ereignisaktion nicht ausgeführt werden kann, wird der Auftrag in den Status geschoben, den du für die Einstellung *Auftragsstatus für Aufträge mit fehlgeschlagener Versandbestätigung* gewählt hast.
+Mit der Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> informierst du {market} automatisch darüber, dass die Artikel eines Auftrags versendet wurden. Wenn die Ereignisaktion nicht ausgeführt werden kann, wird der Auftrag automatisch in den Status geschoben, den du für die Einstellung *Auftragsstatus für Aufträge mit fehlgeschlagener Versandbestätigung* gewählt hast.
 
-Prüfe Aufträge mit diesem Status:
+Prüfe Aufträge in diesem Status:
 
 * Ist der Versanddienstleister korrekt verknüpft?
 * Ist eine Sendungsnummer an dem Auftrag gespeichert?
