--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -536,6 +536,7 @@ include::partial$catalogue-new-to-text.adoc[]
 TIP: Du kannst für limango nur einen Katalog erstellen. Mehrere Kataloge werden für limango nicht unterstützt.
 
 :catalogue-template-name: limango
+:format-item-new:
 :catalogue-plugin:
 
 include::partial$catalogue-creation.adoc[]
