--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -3,6 +3,38 @@
 |====
 |limango-Feld |Empfohlene Zuordnung / Anmerkungen | limango-Produktebene
 
+3+^| Produktname
+
+| Produktname
+| * *Artikeltext » Name 1*, Sprache *Deutsch*
+
+_oder_
+
+* *Artikeltext » Name 2*, Sprache *Deutsch*
+
+_oder_
+
+* *Artikeltext » Name 3*, Sprache *Deutsch*
+
+_oder_
+
+* Eigenschaft des Typs *Text*, Sprache *Deutsch*
+
+*_Tipp:_* Beim Export werden die Datenfelder *Produktname* und *Farbwert* miteinander kombiniert. Zwischen den beiden Datenfeldern wird automatisch das Wort `in` eingefügt. +
+Bei limango wird der Produktname also so angezeigt: `[Produktname] in [Farbwert]`
+| Produkt
+
+| Farbwert
+| * Werte eines Attributs *Farbe*
+
+_oder_
+
+* Werte einer Eigenschaft *Farbe* an Variante
+
+*_Tipp:_* Beim Export werden die Datenfelder *Produktname* und *Farbwert* miteinander kombiniert. Zwischen den beiden Datenfeldern wird automatisch das Wort `in` eingefügt. +
+Bei limango wird der Produktname also so angezeigt: `[Produktname] in [Farbwert]`
+| Produkt
+
 3+^| Produkte
 
 | Händler-Produkt-ID +
