--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -255,38 +255,6 @@ Für Produktnamen gelten die folgenden Regeln:
 * Für bestimmte Kategorien erwartet limango besondere Produktinformationen. Je nach Kategorie sind das zum Beispiel technische Daten oder der Lieferumfang. Für solche Informationen gibt es standardmäßig kein Feld an den Varianten. Wir empfehlen dir deshalb, diese Produktinformationen in einer Eigenschaft des Typs *Text* zu speichern. Nenne diese Eigenschaft zum Beispiel `Zusätzliche Produktinformationen limango`. +
 *_Tipp:_* Vor Integrationsstart erhältst du von limango kategorienspezifische Richtlinien, damit du die Beschreibung an die rechtlichen und inhaltlichen Anforderungen anpassen kannst.
 
-[.collapseBox]
-.Sonderfall Schuhverkauf
---
-Die Schuhmaterialien müssen für alle Schuhe in der folgenden Reihenfolge angegeben werden:
-
-* Obermaterial
-* Futter
-* Decksohle
-* Laufsohle
-
-Dabei dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`
-
-Wenn du Schuhe auf dem limango-Marktplatz verkaufen möchtest, müssen Informationen zum Material über das Feld *Beschreibung* an limango exportiert werden. Dazu kombinierst du zwei plentymarkets Datenfelder und exportierst sie als ein Feld an limango.
-
-Entscheide zuerst, wie du die Materialangaben am Artikel pflegen möchtest. Materialangaben kannst du auf zwei Arten an die Beschreibung anhängen:
-
-* Du nutzt das Datenfeld *Technische Daten* des Artikels für Materialangaben.
-
-_oder_
-
-* Du erstellst eine Eigenschaft des Typs *Text*. Diese Eigenschaft verknüpfst du mit der Hauptvariante des Artikels und pflegst die Materialangaben in dieser Eigenschaft.
-
-Nun ordnest du das plentymarkets Datenfeld im Katalog zu, für das du dich entschieden hast:
-
-. Ordne dem Marktplatz-Datenfeld *Beschreibung* das plentymarkets Datenfeld zu, das die Artikelbeschreibung enthält.
-. Klicke rechts neben diesem Datenfeld auf *Datenfeld hinzufügen* (icon:link[rotate=90]).
-. Ordne das plentymarkets Datenfeld zu, das die Materialangaben enthält. +
-*_Tipp:_* Also entweder das Feld *Technische Daten* oder die Eigenschaft, die du für die Materialangaben erstellt hast.
-. Klicke ganz rechts in der Zeile auf *Einstellungen* (icon:cog[]).
-. Wähle aus der Dropdown-Liste *Trennzeichen* die Option *Leerzeichen*.
---
-
 | Bild URL
 | *_Wichtig:_* Bilder können nur im JPG-Format verarbeitet werden.
 
@@ -343,6 +311,66 @@ Futterstoff zuordnen und an der Variante speichern:
   * `{"viskose": "100"}`
 . Speichere die Einstellungen.
 --
+
+| Schuhe: Obermaterial
+| Für Schuhe dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
+
+. Eigenschaft mit den folgenden Einstellungen erstellen:
+* Name: Schuhe: Obermaterial
+* Bereich: Artikel
+* Typ: Auswahl
+* Auswahlwerte:
+  ** sonstiges-material
+  ** leder
+  ** beschichtetes-leder
+  ** textil
+. Variante im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Hauptvariante öffnen] » Varianten-Tab: Eigenschaften* mit der Eigenschaft verknüpfen.
+. Für die Variante passenden Eigenschaftswert wählen.
+
+| Schuhe: Material Innenfutter
+| Für Schuhe dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
+
+. Eigenschaft mit den folgenden Einstellungen erstellen:
+* Name: Schuhe: Material Innenfutter
+* Bereich: Artikel
+* Typ: Auswahl
+* Auswahlwerte:
+  ** sonstiges-material
+  ** leder
+  ** beschichtetes-leder
+  ** textil
+. Variante im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Hauptvariante öffnen] » Varianten-Tab: Eigenschaften* mit der Eigenschaft verknüpfen.
+. Für die Variante passenden Eigenschaftswert wählen.
+
+| Schuhe: Material Decksohle
+| Für Schuhe dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
+
+. Eigenschaft mit den folgenden Einstellungen erstellen:
+* Name: Schuhe: Material Decksohle
+* Bereich: Artikel
+* Typ: Auswahl
+* Auswahlwerte:
+  ** sonstiges-material
+  ** leder
+  ** beschichtetes-leder
+  ** textil
+. Variante im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Hauptvariante öffnen] » Varianten-Tab: Eigenschaften* mit der Eigenschaft verknüpfen.
+. Für die Variante passenden Eigenschaftswert wählen.
+
+| Schuhe: Material Laufsohle
+| Für Schuhe dürfen nur die folgenden Materialwerte verwendet werden: `Leder`, `beschichtetes Leder`, `Textil` und `sonstiges Material`.
+
+. Eigenschaft mit den folgenden Einstellungen erstellen:
+* Name: Schuhe: Material Laufsohle
+* Bereich: Artikel
+* Typ: Auswahl
+* Auswahlwerte:
+  ** sonstiges-material
+  ** leder
+  ** beschichtetes-leder
+  ** textil
+. Variante im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Hauptvariante öffnen] » Varianten-Tab: Eigenschaften* mit der Eigenschaft verknüpfen.
+. Für die Variante passenden Eigenschaftswert wählen.
 
 | UVP
 | . Verkaufspreis des Preistyps *UVP* mit den Varianten verknüpfen.
