--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -118,6 +118,50 @@ _oder_
 *_Tipp:_* Über dieses Feld teilst du limango mit, mit welchem Attribut oder mit welcher Eigenschaft du Farben pflegst. Zum Bilden der Artikelnummer wird die Farbe an die SKU gehängt. Deshalb muss die Farbe ein eindeutiger Wert sein, zum Beispiel die Herstellerfarbe. +
 | Produkt
 
+| Schuhe: Obermaterial
+| * Eigenschaft an Hauptvariante
+
+_Gültige Werte:_
+
+  ** sonstiges-material
+  ** leder
+  ** beschichtetes-leder
+  ** textil
+| Produkt
+
+| Schuhe: Material Innenfutter
+| * Eigenschaft an Hauptvariante
+
+_Gültige Werte:_
+
+  ** sonstiges-material
+  ** leder
+  ** beschichtetes-leder
+  ** textil
+| Produkt
+
+| Schuhe: Material Decksohle
+| * Eigenschaft an Hauptvariante
+
+_Gültige Werte:_
+
+  ** sonstiges-material
+  ** leder
+  ** beschichtetes-leder
+  ** textil
+| Produkt
+
+| Schuhe: Material Laufsohle
+| * Eigenschaft an Hauptvariante
+
+_Gültige Werte:_
+
+  ** sonstiges-material
+  ** leder
+  ** beschichtetes-leder
+  ** textil
+| Produkt
+
 3+^| Produktvarianten
 
 | Varianten-ID +
