--- a/docs/de-de/modules/changelog/pages/2022-04-13.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-04-13.adoc
@@ -110,7 +110,7 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *{{version}}* veröffentli
 * Ab sofort kannst du Artikeldaten mit einem Katalog an das Preisportal Awin exportieren. Das Marktplatz-Format Awin findest du jetzt im Menü *Daten » Kataloge*. Du exportierst schon Artikeldaten zu Awin über den elastischen Export?
 ** Merkmale und Freitextfelder können für den Katalogexport nicht mehr verwendet werden. Prüfe deshalb, welche Merkmale du aktuell für das Preisportal verwendest. Erstelle Eigenschaften für alle Merkmale, die du weiterhin benötigst.
 ** Beim Wechsel solltest du deinen alten Elastischen Export exakt in dem neuen Katalog nachbauen, damit der Artikelexport weiterhin funktioniert. Ordne also alle Datenfelder so zu, wie sie auch im Elastischen Export an das Preisportal übertragen wurden. Wenn du bestimmte Datenfelder anders als bisher zuordnest, werden möglicherweise beim Export neue Artikel erstellt.
-** Wie du einen Katalog für Awin einrichtest, erfährst du auf der Handbuchseite xref:maerkte:awin[Awin.com].
+** Wie du einen Katalog für Awin einrichtest, erfährst du auf der Handbuchseite xref:maerkte:awin.adoc[Awin.com].
 
 [discrete]
 === eBay
@@ -149,7 +149,7 @@ Weitere Informationen zu OAuth2 findest du auf der Handbuchseite xref:maerkte:eb
 * Ab sofort kannst du Artikeldaten mit einem Katalog an das Preisportal tracdelight exportieren. Das Marktplatz-Format tracdelight findest du jetzt im Menü *Daten » Kataloge*. Du exportierst schon Artikeldaten zu tracdelight über den elastischen Export?
 ** Merkmale und Freitextfelder können für den Katalogexport nicht mehr verwendet werden. Prüfe deshalb, welche Merkmale du aktuell für das Preisportal verwendest. Erstelle Eigenschaften für alle Merkmale, die du weiterhin benötigst.
 ** Beim Wechsel solltest du deinen alten Elastischen Export exakt in dem neuen Katalog nachbauen, damit der Artikelexport weiterhin funktioniert. Ordne also alle Datenfelder so zu, wie sie auch im Elastischen Export an das Preisportal übertragen wurden. Wenn du bestimmte Datenfelder anders als bisher zuordnest, werden möglicherweise beim Export neue Artikel erstellt.
-** Wie du einen Katalog für tracdelight einrichtest, erfährst du auf der Handbuchseite xref:maerkte:tracdelight[tracdelight].
+** Wie du einen Katalog für tracdelight einrichtest, erfährst du auf der Handbuchseite xref:maerkte:tracdelight.adoc[tracdelight].
 
 '''
 
